<resources>
    <string name="app_name">EasyChat</string>
    <string name="action_settings">设置</string>

    <string name="username">帐号</string>
    <string name="rule_username">0123456789abcdefghijklmnopqrstuvwxyz</string>
    <string name="password">密码</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;\\\/</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="input_tips">输入聊天信息</string>

    <string name="none_session">暂无会话信息</string>

    <string name="basic_information">基本信息</string>
    <string name="chat">私聊</string>
    <string name="gender">性别</string>
    <string name="area">地区</string>
    <string name="score">积分</string>
    <string name="brief">简介</string>
    <string name="edit">编辑</string>
    <string name="exit">注销</string>
    <string name="interest">兴趣</string>
    <string name="none_friend">暂无好友</string>
    <string name="save">保存</string>
    <string name="user_info">用户信息</string>
    <string name="old_psw">原密码</string>
    <string name="new_psw">新密码</string>
    <string name="new_psw_twice">确认密码</string>
    <string name="search_title">搜索</string>
    <string name="search_hint">用户的帐号</string>
    <string name="add_friend">添加好友</string>
    <string name="none_friend_requests">暂无好友请求</string>
    <string name="introduction">个人介绍</string>
    <string name="nickname">昵称</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="confirm">确认</string>

    <string name="hint_title">话题</string>
    <string name="hint_content">有什么内容分享？</string>
    <string name="input_comment">输入评论消息</string>
    <string name="select_photo">选择照片</string>
</resources>
