<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.zhj.easychat.ui.widget.BezelImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_small"
            android:layout_height="@dimen/avatar_small"
            android:src="@drawable/person_image_empty"
            android:scaleType="centerCrop"
            app:maskDrawable="@drawable/circle_mask"
            android:layout_marginRight="@dimen/default_margin"/>

        <TextView
            android:layout_toRightOf="@+id/avatar"
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_big"
            android:textColor="#000"
            tools:text="用户名" />

        <TextView
            android:layout_toRightOf="@+id/avatar"
            android:layout_alignBottom="@+id/avatar"
            android:id="@+id/introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="个人介绍"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_medium"
            android:background="@null"
            android:hint="@string/introduction"/>

        <ImageButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_send_grey600_36dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/hint_title"
        android:background="@null"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_size_big"/>

    <EditText
        android:id="@+id/content"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="80dp"
        android:gravity="top"
        android:hint="@string/hint_content"
        android:background="@null"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_size_big" />
</LinearLayout>